closing Technical debt code smell issue 146
Replacing the usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'